<resources>
    <string name="app_name">守护天使</string>
    <string name="app_name_en">Guardian Angel</string>
    <string name="启动图片">启动图片</string>
    <string name="跳过_3">跳过(3)</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="再按一次返回键退出">再按一次返回键退出</string>
    <string name="slogan">slogan of the app</string>
    <string name="密码">密码</string>
    <string name="用户名">用户名</string>
    <string name="登录">登录</string>
    <string name="注册账号">注册账号</string>
    <string name="再次输入密码">再次输入密码</string>
    <string name="注册">注册</string>
    <string name="资讯">资讯</string>
    <string name="健康">健康</string>
    <string name="我的">我的</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="查药">查药</string>
    <string name="搜文">搜文</string>
    <string name="按药名">按药名</string>
    <string name="按类型">按类型</string>
    <string name="按生产商">按生产商</string>
    <string name="评论">评论</string>
    <string name="like">收藏</string>
    <string name="疫情信息">疫情信息</string>
    <string name="境外输入">境外输入</string>
    <string name="无症状感染">无症状感染</string>
    <string name="人">人</string>
    <string name="确诊">确诊</string>
    <string name="治愈">治愈</string>
    <string name="生活指数">生活指数</string>
    <string name="感冒指数">感冒指数：</string>
    <string name="穿衣指数">穿衣指数：</string>
    <string name="辐射指数">辐射指数：</string>
    <string name="过敏指数">过敏指数：</string>
    <string name="运动指数">运动指数：</string>
    <string name="你好">你好！</string>
    <string name="常规设置">常规设置</string>
    <string name="退出登录">退出登录</string>
    <string name="我的收藏">我的收藏</string>
    <string name="留下一句评论">留下一句评论…</string>
    <string name="更多信息即将加入">更多信息即将加入……</string>
    <string name="发送">发送</string>
    <string name="心率监测">心率监测</string>
    <string name="当前心率">当前心率：</string>
    <string name="今日最高心率">今日最高心率：</string>
    <string name="今日最高低心率">今日最高低心率：</string>
    <string name="调节字体大小">调节字体大小</string>
    <string name="小">小</string>
    <string name="大">大</string>
    <string name="普通话朗读">普通话朗读</string>
    <string name="闽南话朗读">闽南话朗读</string>
</resources>