<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/epidemicView"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    tools:layout_editor_absoluteX="-21dp"
    tools:layout_editor_absoluteY="-20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-9dp"
            tools:layout_editor_absoluteY="-8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_bg_health_heart_rate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/心率监测"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/当前心率"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="65"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintStart_toEndOf="@+id/textView16"
                    app:layout_constraintTop_toTopOf="@+id/textView16"
                    app:layout_constraintVertical_bias="0.39" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="bpm"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toTopOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="36dp"
                    android:text="@string/今日最高心率"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="62"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView18"
                    app:layout_constraintStart_toEndOf="@+id/textView18"
                    app:layout_constraintTop_toTopOf="@+id/textView18"
                    app:layout_constraintVertical_bias="0.39" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="bpm"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView18"
                    app:layout_constraintStart_toEndOf="@+id/textView19"
                    app:layout_constraintTop_toTopOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="20sp"
                    android:text="@string/今日最高低心率"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="144"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView20"
                    app:layout_constraintStart_toEndOf="@+id/textView20"
                    app:layout_constraintTop_toTopOf="@+id/textView20"
                    app:layout_constraintVertical_bias="0.39" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="bpm"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView20"
                    app:layout_constraintStart_toEndOf="@+id/textView21"
                    app:layout_constraintTop_toTopOf="@+id/textView20" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>